--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@react-three/fiber": "^9.1.2",
+    "@tanstack/react-query": "^5.79.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
