--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@react-three/fiber": "^9.1.2",
     "@tanstack/react-query": "^5.79.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4"
