--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.1.2",
     "@react-three/fiber": "^9.1.2",
     "@tanstack/react-query": "^5.79.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.4"
+    "react-hook-form": "^7.56.4",
+    "three": "^0.177.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
