--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,4 @@ RUN python -m pip install --upgrade pip
 WORKDIR /app
 
 COPY ./requirements.txt $WORKDIR
-RUN python -m pip install -r ./requirements.txt
+RUN python -m pip install --no-cache-dir -r ./requirements.txt
